# discord-bot-in-c

./: .gitignore  README.md  meson.build
src/: main.c
